@@ -165,6 +165,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Rebol                  Lecanu Guillaume
 - Reg                    SmokingRope
 - Robots                 Christian Lescuyer
+- RPM Specification File Paul Grinberg
 - Ruby                   Amit Gupta, Moises Deniz
 - SAS                    Galen Johnson
 - SDLBasic               Roberto Rossi
